# ME700-Newton

./: README.md  assignment_1_genAIuse.txt  newton_raphson.py  pyproject.toml  setup.py
.github/workflows/: tests.yml
newtonmethod/: newton.py
src/newtonmethod/: __init__.py  newton.py  newton_raphson.py
tests/: setup.py  test_newton_method.py  tests.py
tutorials/: tutorial.ipynb
